; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/hwmon-gsc/src/extr_gsc.c_gsp_write.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/hwmon-gsc/src/extr_gsc.c_gsp_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*, i64, i32)* @gsp_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gsp_write(%struct.i2c_client* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.i2c_client*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = and i32 %9, 255
  %11 = call i32 @i2c_smbus_write_byte_data(%struct.i2c_client* %7, i64 %8, i32 %10)
  %12 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = add nsw i64 %13, 1
  %15 = load i32, i32* %6, align 4
  %16 = ashr i32 %15, 8
  %17 = and i32 %16, 255
  %18 = call i32 @i2c_smbus_write_byte_data(%struct.i2c_client* %12, i64 %14, i32 %17)
  ret i32 1
}

declare dso_local i32 @i2c_smbus_write_byte_data(%struct.i2c_client*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
